- user can view quizzes - quiz links to the first question of the quiz - lists the question choices - uses all ajax and updated the css

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
-<div class="container">
-  NOTHING TO SEE HERE!
+<h1>Quizzes</h1>
+
+<div id="current_quiz">
+  <div id="quiz_name"></div>
 </div>
+<div id="current_question"></div>
+<div id="choices"></div>
