--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Quizzes</h1>
 
 <div id="current_quiz">
-  <div id="quiz_name"></div>
+  <a href="#" id="quiz_name"></a>
 </div>
 <div id="current_question"></div>
-<div id="choices"></div>
+<a href="#" id="choices"></a>
